2001-09-20  Darin Adler  <darin@bentspoon.com>

	* components/help/hyperbola-nav-index.c:
	* components/help/hyperbola-nav-search.c:
	* components/news/nautilus-news.c:
	* components/text/nautilus-text-view.c:
	* libnautilus-private/nautilus-customization-data.c:
	* libnautilus-private/nautilus-directory-async.c:
	* libnautilus-private/nautilus-directory-private.h:
	* libnautilus-private/nautilus-file.c:
	* libnautilus-private/nautilus-icon-factory.c:
	* libnautilus-private/nautilus-link-set.c:
	* libnautilus-private/nautilus-link.c:
	* libnautilus-private/nautilus-metafile.c:
	* libnautilus-private/nautilus-metafile.h:
	* libnautilus-private/nautilus-theme.c:
	* libnautilus-private/nautilus-volume-monitor.c:
	* src/nautilus-bookmark-list.c:
	* src/nautilus-bookmark-parsing.c:
	* src/nautilus-bookmark-parsing.h:
	* src/nautilus-link-set-window.c:
	* src/nautilus-main.c:
	* src/nautilus-property-browser.c:
	* src/nautilus-sidebar.c:
	* src/nautilus-window-menus.c:
	Change all libxml includes to use #include <libxml/*>
	instead of #include <gnome-xml/*>.

2001-09-15  Darin Adler  <darin@bentspoon.com>

	Updated bugzilla.eazel.com references to refer to the
	corresponding bugzilla.gnome.org bug. Also updated my
	email address.

2001-09-14  Darin Adler  <darin@bentspoon.com>

	* libnautilus-private/nautilus-monitor.c:
	(path_is_on_readonly_volume): Move inside #ifdef HAVE_FAM.

2001-09-05  Alex Larsson  <alexl@redhat.com>
	
	Merge some stuff from the redhat-outstanding-patches branch

	* eazel-logos/default.xml:
	* icons/default.xml:
	don't hardcode the title, title info, and
	shadow colors; this prevented the auto-color-selection stuff
	in nautilus-sidebar-title.c from working properly.
	And the hardcoded values were the same thing the autoselector
	would have chosen anyhow.

	* libnautilus-private/nautilus-monitor.c:
	Don't monitor files on read only volumes, they never change, and
	will keep cdroms from being unmounted because fam has open file
	descriptors on them.