@@ -1,3 +1,13 @@
+2001-09-21  Philip Langdale  <philipl@mail.utexas.edu>
+
+	* components/help/converters/gnome-info2html2/html.c
+	* components/help/converters/gnome-info2html2/html.h
+	* components/help/converters/gnome-info2html2/main.c: Added optional
+	"galeon mode" invoked with -g command line param. This involves writing
+	fully qualified info: hrefs instead of just the #nodename target,
+	which appears to me to be a bug, but might have negative effects on
+	nautilus. It also uses ? queries instead of # refs when forming hrefs.
+
 2001-09-20  Darin Adler  <darin@bentspoon.com>
 
 	* gnome-db2html2/gdb3html.h: Change libxml includes to use
